--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <div class="app container mt-5">
       <div class="row">
         <div class="col-sm-6">
-          <h5>À l'EDJ, les étudiants travaillent de plus en plus</h5>
-          <p class="text-muted">Commits par mois (source: Pierre Romera).</p>
+          <h5>Le taux de chômage aux Etats-Unis stagne</h5>
+          <p class="text-muted">Taux de chômage des 12 premiers jours de janvier de chaque mois (source: Bureau of Labor Statistics).</p>
           <line-chart :height="200" class="mt-3 mb-5"></line-chart>
         </div>
 
         <div class="col-sm-6">
-          <h5>Afrique du Sud: 10 ans de hausse du braconnage</h5>
-          <p class="text-muted">Rhinoceros tués chaque année par le braconnage en Afrique du Sud (source: South African Government).</p>
+          <h5>Canada : Le phishing par SMS explose en Ontario</h5>
+          <p class="text-muted">Nombre d'arnarques par texto par province, 2016 (source : Canadian Antifraud Center)</p>
           <bar-chart :height="200" class="mt-3 mb-5"></bar-chart>
         </div>
 
@@ -38,6 +38,13 @@
           <p class="text-muted">Affaires de corruption en Ile-de-France (source: Transparency International)</p>
           <doughnut-chart :height="200" class="mt-3 mb-5"></doughnut-chart>
         </div>
+
+        <div class="col-sm-8">
+          <h5>Confiance dans la couverture médiatique</h5>
+          <p class="text-muted">Source : Infratest dimap (2015)</p>
+          <multibar-chart :height="500" width="700" class="mt-3 mb-5"></multibar-chart>
+        </div>
+
       </div>
     </div>
 
@@ -52,6 +59,7 @@
     <script src="charts/bar.js"></script>
     <script src="charts/pie.js"></script>
     <script src="charts/doughnut.js"></script>
+    <script src="charts/multibar.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
